<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/lblTitleHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/memory_game"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtInstructionsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtInstructionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="15dp"
        android:text="@string/instructions_title"
        android:textColor="@color/light_purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtInstructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitleHome" />

    <TextView
        android:id="@+id/txtInstructions"
        android:layout_width="345dp"
        android:layout_height="479dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/instructions"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/txtInputName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInstructionsTitle"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/txtInputName"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/light_purple"
        android:textColorLink="@color/light_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInstructions" />


</androidx.constraintlayout.widget.ConstraintLayout>