<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    tools:context=".GameFragment">

    <TextView
        android:id="@+id/lblTitleGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/lets_play"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gridGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridGame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:background="@color/light_purple"
        android:columnCount="6"
        android:rowCount="6"
        app:layout_constraintBottom_toTopOf="@+id/btnPlayAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitleGame">

        <androidx.cardview.widget.CardView
            android:id="@+id/square00"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            app:cardElevation="0dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square01"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square02"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square03"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square04"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square05"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square10"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            app:cardElevation="0dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square11"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square12"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square13"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square14"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square15"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square20"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            app:cardElevation="0dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square21"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square22"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square23"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square24"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square25"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square30"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            app:cardElevation="0dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square31"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square32"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square33"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square34"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square35"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square40"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            app:cardElevation="0dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square41"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square42"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square43"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square44"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square45"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square50"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            app:cardElevation="0dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square51"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square52"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square53"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square54"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/square55"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"></androidx.cardview.widget.CardView>

    </GridLayout>

    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridGame" />

    <TextView
        android:id="@+id/txtScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="150dp"
        android:text="@string/score_default"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/gridGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtTilesLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="150dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/gridGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toEndOf="@+id/txtTilesLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/txtTilesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="150dp"
        android:text="@string/tiles_default"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/gridGame"
        app:layout_constraintEnd_toStartOf="@+id/txtScoreLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="150dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/gridGame"
        app:layout_constraintEnd_toStartOf="@+id/txtScoreLabel"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />


</androidx.constraintlayout.widget.ConstraintLayout>